# pyshell

./: README.md  pyproject.toml
src/ccsh/: main.py
