[project]
name = "ccsh"
version = "0.0.1"
authors = [
  { name="Your Name", email="author@example.com" },
]
description = "A simple Shell"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ccsh = "ccsh.main:ccsh"

[project.urls]
Homepage = "https://codingchallenges.fyi/challenges/challenge-shell"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}